Final structure of the table defined

--- a/send/test.html
+++ b/send/test.html
@@ -12,6 +12,9 @@
             Tipo_mov (entrada/salida):<br>
             <input type="text" name="mov" ><br>
 
+            Conteo:<br>
+            <input type="text" name="count" ><br>
+
             <input type="submit" name="Enviar" >
         </form>
     </body>
