Total styles added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                             en tecnología del Internet de las Cosas.
                         </p>
                         <a class="btn btn-primary btn-xl" href="#about">Conozca más</a>
-                        <a class="btn btn-primary btn-xl" href="./html/login.html">Soy Alumno</a>
-                        <a class="btn btn-primary btn-xl" href="./html/login_admin.html">Soy Administrador</a>
+                        <a class="btn btn-primary btn-xl" href="./html/login.php">Soy Alumno</a>
+                        <a class="btn btn-primary btn-xl" href="./html/login_admin.php">Soy Administrador</a>
                     </div>
                 </div>
             </div>
