--- a/receive/test_receive_data.html
+++ b/receive/test_receive_data.html
@@ -5,15 +5,15 @@
     </head>
 
     <body>
-        <form action="send_data.php" method="GET">
+        <form action="receive_data.php" method="GET">
+            rfid:<br>
+            <input type="text" name="rfid" ><br>
+            
             Lab:<br>
             <input type="text" name="lab" ><br>
-
+            
             Tipo_mov (entrada/salida):<br>
             <input type="text" name="mov" ><br>
-
-            Conteo:<br>
-            <input type="text" name="count" ><br>
 
             <input type="submit" name="Enviar" >
         </form>
